# rust-common

./: Cargo.toml
common/src/: fs.rs
common_derive/: Cargo.toml
core/: Cargo.toml
core/src/: components.rs  lib.rs  prelude.rs
core/src/commands/: gen.rs
core/src/config/: clap.rs  yaml.rs
core/tests/: integration_tests.rs
dns_common/: Cargo.toml
dns_common/src/: deser.rs  system.rs  tracing.rs
dns_common_derive/: Cargo.toml
scripts/: cargoall  core.sh  dot  dotall
