[package]
name = "myapp"
version = "0.4.0"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
edition = "2021"
description = "Myapp utils"
homepage = "https://github.com/denisidoro/myapp"
documentation = "https://github.com/denisidoro/myapp"
repository = "https://github.com/denisidoro/myapp"
keywords = ["blog"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[dependencies]
regex = { version = "1.5.4", default-features = false, features = ["std", "unicode-perl"] }
clap = { version = "4.0.29", features = ["derive"] }
walkdir = "2"
# workerpool = "1.2.0"
once_cell = "1.10.0"
# isahc = { version = "1.7.2", default-features = false , features = ["http2", "static-curl", "text-decoding"] }
# reqwest = { version = "0.11.0", default-features = false, features = ["blocking", "gzip", "rustls-tls"] }
derive_more = "0.99.16"
common_derive = { path = "../common_derive" }
common = { path = "../common", default-features = false, features = ["yaml", "json"] }
serde = { version = "1.0" } # TODO: try to remove somehow
# serde_derive = "1.0.137"
# anyhow = "1.0.55"
chrono = "0.4"

# [dev-dependencies]
# httpmock = "0.6.6"

[lib]
name = "myapp"
path = "src/lib.rs"

[[bin]]
name = "myapp"
path = "src/bin/main.rs"
bench = false
