[package]
name = "dns_common"
version = "0.2.1"
edition = "2021"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
description = "Personal toolbelt for Rust code"
license = "Apache-2.0"

[dependencies]
directories-next = "2.0.0"
anyhow = "1.0.68"
tracing = "0.1.37"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = { version = "0.9.16", optional = true }
serde_json = { version = "1.0.91", optional = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
default = ["yaml"]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]
