[package]
name = "dns_common_derive"
version = "0.1.0"
edition = "2021"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
description = "Personal derive macros for Rust code"
license = "Apache-2.0"

[dependencies]
quote = "1.0.20"
synstructure = "0.12.6"
proc-macro2 = "1.0.40"

[lib]
proc-macro = true
